@@ -101,9 +101,9 @@
             <version>1.7.0</version>
         </dependency>
         <dependency>
-            <groupId>org.fxmisc.richtext</groupId>
-            <artifactId>richtextfx</artifactId>
-            <version>0.9.1</version>
+            <groupId>com.github.MrChebik</groupId>
+            <artifactId>RichTextFX</artifactId>
+            <version>cabee30961</version>
         </dependency>
         <dependency>
             <groupId>com.github.javaparser</groupId>
